Fixed secondary vertical scrollbar on mobile

--- a/Pages/Dashboard-Client/styles.css
+++ b/Pages/Dashboard-Client/styles.css
@@ -36,6 +36,10 @@
   clear: both;
 }
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   width: 100%;
@@ -145,7 +149,6 @@ hr {
 .sidebar .sidebar-layout {
   height: 100%;
   max-height: 100%;
-  min-height: 100%;
   min-height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
